--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
-@import "../node_modules/mini.css/dist/mini-dark.min.css";
+//@import "../node_modules/mini.css/dist/mini-dark.min.css";
+
+html,
+body {
+  height: 100%;
+  color: #fff;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background: #303030;
+}
+
+.docs-app-background {
+  background: #303030;
+}
