--- a/src/app/components/step2/step2.component.html
+++ b/src/app/components/step2/step2.component.html
@@ -32,6 +32,7 @@
     <input
       type="checkbox"
       name="towHitch"
+      id="includeTow"
       [(ngModel)]="includeTow"
       (change)="onIncludeTowChange()"
     />
